package data;

public class ContinuousAttribute extends Attribute {

	public ContinuousAttribute(String name, int index) {
		super(name, index);
	}
}
